Trying to solve weird scaling issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,24 @@ body {
     background: linear-gradient(to right, #831b1b 10%, #ffffff 10%, #ffffff 90%, #831b1b 90%);
     color: #000000;
   }
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
     body {
         background: linear-gradient(to right, #831b1b 5%, #ffffff 5%, #ffffff 95%, #ADBCA5 95%);
         color: #000000;
     }
-}
+}*/
 main {
-    padding-bottom: 20.5%; /* Adjust this value to the height of your footer */
+    padding-bottom: 2.5%; /* Adjust this value to the height of your footer */
     margin-right: 10%;
     margin-left: 10%;
 }
 
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
     main {
         margin-right: 5%;
         margin-left: 5%;
     }
-}
+}*/
 
 
 
@@ -136,16 +136,16 @@ main {
         width: 55%;
         padding: 20px 40px;
     }
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
 
     .right-column {
         width: 35%;
     }
 
         .right-column img {
-            max-width: 100%; /* Set the max-width to 100% for mobile screens */
-        }
-}
+            max-width: 100%;*/ /* Set the max-width to 100% for mobile screens */
+        /*}
+}*/
 
         .right-columnB p {
             text-align: justify;
